--- a/Notebooks/movie_rec_content_based.ipynb
+++ b/Notebooks/movie_rec_content_based.ipynb
@@ -5,7 +5,7 @@
    "id": "6e5c9161-b887-4a8a-8bfe-a9d8f0ca58ac",
    "metadata": {},
    "source": [
-    "## MOVIE RECOMMENDATION SYSTEM BY ENTBAPPY"
+    "## MOVIE RECOMMENDATION SYSTEM"
    ]
   },
   {
